@@ -23,6 +23,7 @@ exempt of errors.
 - Jiri Zouhar
 - John Dennis
 - Jonathan (no_dice)
+- Josh Carroll
 - Keith Brindley
 - Leuk_He
 - Loigu
